# config-management

./: .gitignore  .gitmodules  Makefile  README.md  generate.py  pyproject.toml
components/argocd/: grafana.yaml  prometheus.yaml
components/grafana/: deployment.yaml  hpa.yaml  service.yaml
components/kibana/: deployment.yaml  hpa.yaml  service-account.yaml
components/logstash/: deployment.yaml  hpa.yaml
components/prometheus/: deployment.yaml  hpa.yaml
configs/: development.yaml  production.yaml
lib/: datapath.py  grafana.py  kibana.py  logstash.py  prometheus.py  stack_registry.py  util.py
manifests/gke_dev_europe-west4_gc-dev-kube0/grafana/: application.yaml  deployment.yaml  hpa.yaml  service-account.yaml  service.yaml
manifests/gke_dev_europe-west4_gc-dev-kube0/kibana/: deployment.yaml  hpa.yaml
manifests/gke_dev_europe-west4_gc-dev-kube1/logstash/: deployment.yaml  hpa.yaml  service-account.yaml
manifests/gke_dev_europe-west4_gc-dev-kube1/prometheus/: application.yaml  deployment.yaml  hpa.yaml  service-account.yaml  service.yaml
manifests/gke_prd_europe-west4_gc-prd-kube0/grafana/: application.yaml  deployment.yaml  hpa.yaml  service-account.yaml
manifests/gke_prd_europe-west4_gc-prd-kube0/kibana/: deployment.yaml  hpa.yaml  service.yaml
manifests/gke_prd_europe-west4_gc-prd-kube1/logstash/: deployment.yaml  hpa.yaml
manifests/gke_prd_europe-west4_gc-prd-kube1/prometheus/: application.yaml  deployment.yaml  hpa.yaml  service.yaml
tests/: test_datapath.py  test_grafana.py
