[tool.poetry]
name = "config-management"
version = "0.1.0"
description = "Manage configurations"
authors = ["Ids van der Molen <2285220+idsvandermolen@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.8"
kubernetes = "^24.2.0"
datapath = {git = "https://github.com/idsvandermolen/datapath.git", rev = "v0.3.1"}
ruamel-yaml = "^0.17.21"

[tool.poetry.dev-dependencies]
pylint = "^2.14.2"
pytest = "^7.1.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
